[project]
name = "crypto-classifier"
version = "0.1.0"
description = "End-to-end ML pipeline for classifying next-day cryptocurrency price direction using CoinGecko data.\""
authors = [
    {name = "Samuel Mason",email = "masonsam64@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
