[project]
name = "crypto-classifier"
version = "0.1.0"
description = "End-to-end ML pipeline for production ready classifying."
authors = [
    {name = "Samuel Mason",email = "masonsam64@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=2.1.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
